[gd_scene load_steps=5 format=3 uid="uid://cygteeqvo3oc"]

[ext_resource type="Script" path="res://Objects/My_Stuff/Rhythm/objRhythmPreviewer.gd" id="1_sv2vy"]
[ext_resource type="Texture2D" uid="uid://cikxmkd3je67u" path="res://Graphics/Sprites/Room_objects/sprPlayMusic.png" id="3_yb448"]
[ext_resource type="Texture2D" uid="uid://boc18ngim4vdg" path="res://Graphics/Sprites/My Stuff/sprUpArrow.png" id="4_n6oje"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0m5uk"]

[node name="objRhythmPreviewer" type="Node2D"]
script = ExtResource("1_sv2vy")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_0m5uk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_yb448")

[node name="UpArrow" type="Sprite2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_n6oje")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
